--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/rfreebern/pokey-api-js/issues"
   },
-  "homepage": "https://github.com/rfreebern/pokey-api-js#readme"
+  "homepage": "https://github.com/rfreebern/pokey-api-js#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "isomorphic-fetch": "^2.2.1"
+  }
 }
